--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- "Main section" -->
